--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.17.8
-  cloud_firestore: ^4.15.8
-  firebase_storage: ^11.6.9
-  google_fonts: ^6.2.0
+  google_fonts: 6.1.0
   provider: ^6.1.2
+  firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
