--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: 6.1.0
   provider: ^6.1.2
   firebase_core: ^2.27.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
