--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^2.27.0
   otp_text_field: ^1.1.3
+  bottom_navy_bar: ^6.0.0
 
 dev_dependencies:
   flutter_test:
