--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.17.8
-  google_fonts: 6.1.0
   provider: ^6.1.2
-  firebase_core: ^2.27.0
+  google_fonts: 6.1.0
   otp_text_field: ^1.1.3
   bottom_navy_bar: ^6.0.0
+  appwrite: ^11.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
