--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   otp_text_field: ^1.1.3
   bottom_navy_bar: ^6.0.0
   appwrite: ^11.0.1
+  easy_loading_button: ^0.3.2
 
 dev_dependencies:
   flutter_test:
